# typegame

./: README.md  pyproject.toml  requirements.txt
docs_config/: current_release.rst
invoke_commands/: release.py
mypackage/: __main__.py
mypackage/core/: app.py  callbacks.py  layout.py
quizes/: long-game.ipynb  short-game.ipynb  testgame.ipynb
typegame/: __main__.py
typegame/core/: app.py  callbacks.py  layout.py  question_class.py  submission_class.py
typegame/parsing/: from_notebook.py  to_components.py
typegame/tests/: test_nothing.py
